deployments/k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: cartgo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: REPLACE_WITH_ECR_URI/payment-service:latest
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: cartgo
spec:
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
  type: ClusterIP
