deployments/k8s/support-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-service
  namespace: cartgo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: support-service
  template:
    metadata:
      labels:
        app: support-service
    spec:
      containers:
      - name: support-service
        image: REPLACE_WITH_ECR_URI/support-service:latest
        ports:
        - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: support-service
  namespace: cartgo
spec:
  selector:
    app: support-service
  ports:
  - protocol: TCP
    port: 8087
    targetPort: 8087
  type: ClusterIP
